# exact_factor

./: .gitignore  CMakeLists.txt  README.md  makefile  paper_runs.sh
.circleci/: config.yml
ShinMetiu/: BE_subgauge.config  git_run.config  git_run_freechi_gauss.config  git_run_freechi_linear.config  git_run_freechi_linear_RHS.config  git_run_gaugesub.config  git_run_maskA_smalldt.config  git_run_maskdt.config  git_run_maskuen.config  git_run_maskuen_tightermask.config  git_run_maskuen_tightestmask.config  git_run_nomask.config  git_run_smalldt.config  verify.config
ShinMetiu/NACV/: NACV1-12_1k.txt  NACV1-12_2k.txt  NACV1-21_1k.txt  NACV1-21_2k.txt  NACV1-22_1k.txt  NACV1-22_2k.txt  NACV2-11_1k.txt  NACV2-11_2k.txt  NACV2-12_1k.txt  NACV2-12_2k.txt  NACV2-21_1k.txt  NACV2-21_2k.txt  NACV2-22_1k.txt  NACV2-22_2k.txt
ShinMetiu/plots/: do_plots.sh  paper_plots.sh  texplots.sh
src/: RK45.h  compNACV.h  derivs.h  functions.h  ints.h  io.h  linsol.h  masks.h  solver.cpp  state_objs.h  vars.h
src/deprecated/: fftw_deriv.h  nelder_fit.h
src/fourier_derivs/: fd  fd_test.cpp  makefile
tests/: unit_tests.cpp
tests/verify/: 149Avec.txt  149C1.txt  149C1_sq.txt  149C2.txt  149C2_sq.txt  149GCOC.txt  149T1_1.txt  149T1_2.txt  149T2_1.txt  149T2_2.txt  149T3_1.txt  149T3_2.txt  149TDPES.txt  149Uen1.txt  149Uen2.txt  149chi.txt  149divAvec.txt  149dt_C_1.txt  149dt_C_set2.txt  149expUen.txt  149gauge_cond.txt  149global_mask.txt  149grad_C1.txt  149grad_C2.txt  149grad_chi.txt  149grad_sq_C1.txt  149grad_sq_C2.txt  149grad_sq_chi.txt  149nd.txt  149phi_norm.txt  (+9 more)
